--- a/public/print/print_php_files/styles.css
+++ b/public/print/print_php_files/styles.css
@@ -23,18 +23,7 @@ a:hover {
     color: #0099ff; 
     text-decoration: underline
 }
-@media Print {
-    div.page {
-        margin: 0px; 
-        height: 100%;
-        page-break-before: always;
-    }
-
-    body {
-        -webkit-print-color-adjust: exact;
-    }
-}
-.UnderLine {
+.underline {
     font-weight: normal;
     margin: 1px;
     color: #0000ff;
@@ -46,7 +35,7 @@ a:hover {
     height: 18px;
     text-align: center
 }
-.UnderLineLeft {
+.underline-left {
     font-weight: normal; 
     margin: 1px; 
     color: #0000ff; 
@@ -70,12 +59,12 @@ a:hover {
     font-family: Verdana
 }
 .thaitext {
-    font-size: 13px; 
+    font-size: 16pt; 
     color: #000000; 
     font-family: "TH SarabunPSK";
 }
-.thaitext_small {
-    font-size: 10px; 
+.thaitext-sm {
+    font-size: 12pt; 
     color: #000000; 
     font-family: "TH SarabunPSK";
 }
@@ -84,7 +73,7 @@ a:hover {
     color: #000000; 
     font-family: "TH SarabunPSK";
 }
-.CordiaUPC {
+.cordia-upc {
     font-size: 12px; 
     color: #000000; 
     font-family: "TH SarabunPSK";
@@ -154,7 +143,7 @@ p {
     border-collapse: collapse;
 }
 
-p.MsoNormal, li.MsoNormal, div.MsoNormal,span.MsoNormal {
+p.mso-normal, li.mso-normal, div.mso-normal,span.mso-normal {
     border-bottom: 1px dashed #000000;
     margin-top:0cm;
     margin-right:0cm;
@@ -164,7 +153,7 @@ p.MsoNormal, li.MsoNormal, div.MsoNormal,span.MsoNormal {
     font-size:16pt;
     font-family:"TH SarabunPSK";
 }
-.UnderlineTagp {
+.underline-tagp {
     border-bottom: 1px dashed #000000; 
     padding: 0px; 
     margin:0px;
@@ -177,3 +166,23 @@ p.MsoNormal, li.MsoNormal, div.MsoNormal,span.MsoNormal {
     font-family:"TH SarabunPSK";
     font-size:16pt;
 }
+.page {
+        margin: 0px; 
+        /*height: 100%;*/
+        /*position: relative;*/
+}
+.page-layout {
+    width: 740px; 
+    margin-left: 30px; 
+    margin-right: 15px; 
+    margin-top: 0px; 
+    padding: 5px;
+}
+/*@media print {
+    body {
+        -webkit-print-color-adjust: exact;
+    }
+    .page {
+        page-break-before: always;
+    }
+}*/
