Style main layout with set min-height to 77vh

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,10 @@
 /**
  * ######################### Main #########################
  */
+
 .content {
     margin-top: 60px;
-    min-height: 480px;
+    min-height: 77vh;
 }
 
 .page__title {
