--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,21 +1,25 @@
 /**
  * ######################### Main #########################
  */
+.app {
+  width: 100vw;
+  height: calc(100vh - 105px);
+}
 
 .content {
-    margin-top: 60px;
-    min-height: 77vh;
+  margin-top: 60px;
+  min-height: 77vh;
 }
 
 .page__title {
-    margin: 0px;
+  margin: 0px;
 }
 
 .page__title span {
-    margin: 0px;
-    padding: 0px;
-    font-size: 18px;
-    font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  font-size: 18px;
+  font-weight: bold;
 }
 /**
  * ######################### Main #########################
@@ -25,26 +29,26 @@
  * ######################### Button Square #########################
  */
 .btn-sq-lg {
-    width: 150px !important;
-    height: 150px !important;
+  width: 150px !important;
+  height: 150px !important;
 }
 
 .btn-sq {
-    width: 100px !important;
-    height: 100px !important;
-    font-size: 10px;
+  width: 100px !important;
+  height: 100px !important;
+  font-size: 10px;
 }
 
 .btn-sq-sm {
-    width: 50px !important;
-    height: 50px !important;
-    font-size: 10px;
+  width: 50px !important;
+  height: 50px !important;
+  font-size: 10px;
 }
 
 .btn-sq-xs {
-    width: 25px !important;
-    height: 25px !important;
-    padding:2px;
+  width: 25px !important;
+  height: 25px !important;
+  padding: 2px;
 }
 /**
  * ######################### Button Square #########################
@@ -92,7 +96,7 @@
 /**
  * ######################### Tab #########################
  */
- 
+
 /**
  * ######################### Carousel #########################
  */
@@ -144,23 +148,23 @@
  * ######################### tag #########################
  */
 .tag__list {
-    margin: 0;
-    padding: 0;
-    padding-left: 0;
-    display: inline;
-    list-style-type: none;
-    /*list-style-type: circle;*/
+  margin: 0;
+  padding: 0;
+  padding-left: 0;
+  display: inline;
+  list-style-type: none;
+  /*list-style-type: circle;*/
 }
 .tag__list li {
-    display: inline-block;
-    margin: 0;
-    margin-right: 1px;
-    padding: 0;
+  display: inline-block;
+  margin: 0;
+  margin-right: 1px;
+  padding: 0;
 }
 
 .tag__list li h5 {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 /**
  * ######################### tag #########################
@@ -170,43 +174,43 @@
  * ######################### tag #########################
  */
 .tag {
-    font-size: 12px;
-    padding: 0.3em 0.4em 0.3em;
-    margin: 2px 1px !important;
-    display: inline-block;
-    max-width: 100%;
+  font-size: 12px;
+  padding: 0.3em 0.4em 0.3em;
+  margin: 2px 1px !important;
+  display: inline-block;
+  max-width: 100%;
 }
 
 .tag > span {
-    display: inline-block;
-    max-width: 94%;
-    white-space: nowrap;
-    overflow: hidden;
-    -ms-text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
+  display: inline-block;
+  max-width: 94%;
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
 }
 
 .tag a {
-    display: inline-block;
-    color: #bbb;
-    cursor: pointer;
-    opacity: 0.6;
-    margin: 0 0 0 0.3em;
+  display: inline-block;
+  color: #bbb;
+  cursor: pointer;
+  opacity: 0.6;
+  margin: 0 0 0 0.3em;
 }
 
 .tag a:hover {
-    opacity: 1.0;
+  opacity: 1;
 }
 
 .tag a .glyphicon-white {
-    color: #fff;
-    margin-bottom: 2px;
+  color: #fff;
+  margin-bottom: 2px;
 }
 
 .tag .remove {
-    vertical-align: bottom;
-    top: 0;
+  vertical-align: bottom;
+  top: 0;
 }
 /**
  * ######################### tag #########################
@@ -272,71 +276,71 @@
 /**
  * ######################### Radio Button #########################
  */
-#radioBtn .notActive{
-    color: #3276b1;
-    background-color: #fff;
+#radioBtn .notActive {
+  color: #3276b1;
+  background-color: #fff;
 }
 /**
  * ######################### Radio Button #########################
  */
 
- /**
+/**
  * ######################### Card #########################
  */
 .card {
-    font-size: 1em;
-    overflow: hidden;
-    margin: 10px;
-    padding: 0;
-    border: none;
-    border-radius: .28571429rem;
-    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+  font-size: 1em;
+  overflow: hidden;
+  margin: 10px;
+  padding: 0;
+  border: none;
+  border-radius: 0.28571429rem;
+  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
 }
 
 .card-block {
-    font-size: 1em;
-    position: relative;
-    margin: 0;
-    padding: 1em;
-    border: 1px solid rgba(34, 36, 38, .1);
-    /*border-top: 1px solid rgba(34, 36, 38, .1);*/
-    box-shadow: none;
+  font-size: 1em;
+  position: relative;
+  margin: 0;
+  padding: 1em;
+  border: 1px solid rgba(34, 36, 38, 0.1);
+  /*border-top: 1px solid rgba(34, 36, 38, .1);*/
+  box-shadow: none;
 }
 
 .card-img-top {
-    display: block;
-    width: 100%;
-    height: 169px;
+  display: block;
+  width: 100%;
+  height: 169px;
 }
 
 .card-title {
-    font-size: 1.28571429em;
-    font-weight: 700;
-    line-height: 1.2857em;
+  font-size: 1.28571429em;
+  font-weight: 700;
+  line-height: 1.2857em;
 }
 
 .card-text {
-    clear: both;
-    margin-top: .5em;
-    color: rgba(0, 0, 0, .68);
-    /*border: 1px solid rgba(34, 36, 38, .1);*/
-    min-height: 140px;
+  clear: both;
+  margin-top: 0.5em;
+  color: rgba(0, 0, 0, 0.68);
+  /*border: 1px solid rgba(34, 36, 38, .1);*/
+  min-height: 140px;
 }
 
 .card-footer {
-    font-size: 1em;
-    position: static;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    padding: .75em 1em;
-    color: rgba(0, 0, 0, .4);
-    border-top: 1px solid rgba(0, 0, 0, .05) !important;
-    background: #fff;
+  font-size: 1em;
+  position: static;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  padding: 0.75em 1em;
+  color: rgba(0, 0, 0, 0.4);
+  border-top: 1px solid rgba(0, 0, 0, 0.05) !important;
+  background: #fff;
 }
 
 .card-inverse .btn {
-    border: 1px solid rgba(0, 0, 0, .05);
+  border: 1px solid rgba(0, 0, 0, 0.05);
 }
 /**
  * ######################### Card #########################
@@ -367,8 +371,8 @@
 }
 
 .desc p {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 /**
  * ######################### Description #########################
@@ -378,107 +382,115 @@
  * ######################### Dropdown #########################
  */
 .dropdown.dropdown-lg .dropdown-menu {
-    margin-top: -1px;
-    padding: 6px 20px;
+  margin-top: -1px;
+  padding: 6px 20px;
 }
 .input-group-btn .btn-group {
-    display: flex !important;
+  display: flex !important;
 }
 .btn-group .btn {
-    border-radius: 0;
-    margin-left: -1px;
+  border-radius: 0;
+  margin-left: -1px;
 }
 .btn-group .btn:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .btn-group .form-horizontal .btn[type="submit"] {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 .form-horizontal .form-group {
-    margin-left: 0;
-    margin-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 .form-group .form-control:last-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 @media screen and (min-width: 768px) {
-    #adv-search {
-        width: 500px;
-        margin: 0 auto;
-    }
-    .dropdown.dropdown-lg {
-        position: static !important;
-    }
-    .dropdown.dropdown-lg .dropdown-menu {
-        min-width: 500px;
-    }
+  #adv-search {
+    width: 500px;
+    margin: 0 auto;
+  }
+  .dropdown.dropdown-lg {
+    position: static !important;
+  }
+  .dropdown.dropdown-lg .dropdown-menu {
+    min-width: 500px;
+  }
 }
 /**
  * ######################### Dropdown #########################
  */
 
- /* Popup container - can be anything you want */
+/* Popup container - can be anything you want */
 .popup {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* The actual popup */
 .popup .popuptext {
-    visibility: hidden;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 8px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
 }
 
 /* Popup arrow */
 .popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
 }
 
 /* Toggle this class - hide and show the popup */
 .popup .show {
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 /* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
-    from {opacity: 0;} 
-    to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity:1 ;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-tr.cancel-data td:not(:nth-last-child(-n+2)) {
-    text-decoration: line-through; 
-    text-decoration-color: red;
+tr.cancel-data td:not(:nth-last-child(-n + 2)) {
+  text-decoration: line-through;
+  text-decoration-color: red;
 }
