--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,6 +40,7 @@
 
 .page__title .text-muted {
   font-weight: 200;
+  font-size: 14px;
 }
 /**
  * ######################### Main #########################
