--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,6 +42,13 @@
   font-weight: 200;
   font-size: 14px;
 }
+
+.radio__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 34px;
+}
 /**
  * ######################### Main #########################
  */
