--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,6 +45,7 @@
 
 .radio__wrapper {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   height: 34px;
