Created new .radio__wrapper.has-error css class in main.css and used its in drivers/newform and editform

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,10 @@
   justify-content: flex-start;
   height: 34px;
 }
+
+.radio__wrapper.has-error {
+  color: #a94442;
+}
 /**
  * ######################### Main #########################
  */
